Fix issue where login-panel div shows on mobile

--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -65,6 +65,7 @@ $loginPanelMobileHeight: 0;
 
     @media (max-width: $phone) {
         max-height: 0;
+        overflow: hidden;
     }
 
     @media (min-width: 768px) {
